--- a/src/layouts/index.scss
+++ b/src/layouts/index.scss
@@ -1,22 +1,65 @@
-@import url('https://fonts.googleapis.com/css?family=Exo+2');
+@import url('https://fonts.googleapis.com/css?family=Raleway');
 html,
-body {
+body,
+#___gatsby{
 	min-height: 100vh;
+	width: 100%;
+	height: 100%;
 	margin: 0;
     padding: 0;
-    font-family: 'Exo 2', sans-serif;
+    font-family:  'Raleway', sans-serif;
 }
 * {
 	box-sizing: border-box;
+	color: #26273C;
 }
 
-.children{
-	max-width: 992px;
-	min-height: calc(100vh - 206px );
+.children-card{
+	background-color: white;
+	// border-radius: 5px;
+	// opacity: 0.5;
+	width: 100%;
+	max-width: 1000px;
+	height: 100%;
+	z-index: 0;
+
+
+	border: 1px solid #26273C;
+	padding: 1.5rem;
+	// margin-top: 100px;
+    box-shadow: 5px 5px #26273C;
+	// max-width: 992px;
+	// min-height: calc(100vh - 206px );
 }
 
-.mainwrapper{
+.children-wrapper{
+	// background-color: aquamarine;
+	// opacity: 0.5;
+	width: 100%;
+	height: 100%;
+	z-index: 0;
 	display: flex;
 	align-items: center;
 	flex-direction: column;
+	// justify-content: center;
+	padding: 2rem;
+	// max-width: 992px;
+	// min-height: calc(100vh - 206px );
+}
+
+.background,
+body{
+	background-color: #DFF6B5;
+	position: absolute;
+	z-index: -2;
+	width: 100%;
+	height: 100%;
+}
+
+.background-top{
+	background-color: #47785C;
+	position: absolute;
+	width: 100%;
+	height: 300px;
+	z-index: -1;
 }
