--- a/src/components/header/index.scss
+++ b/src/components/header/index.scss
@@ -54,7 +54,10 @@
                     cursor: pointer;
                     display: flex;
                     justify-content: flex-end;
-                    margin-bottom: 1rem;
+                    margin: 0;
+                    // margin-bottom: 1rem;
+                    height: 37px;
+                    align-items: center;
                     // margin-top: 20px;
                 }
 
