--- a/src/components/header/index.scss
+++ b/src/components/header/index.scss
@@ -13,7 +13,6 @@
         width: 100%;
         max-width: 1000px;
         margin-bottom: 2rem;
-
        
         .title-wrapper{
             display: flex;
@@ -59,6 +58,17 @@
                     height: 37px;
                     align-items: center;
                     // margin-top: 20px;
+                    &:hover{
+                        // border-top-color: #D14334;
+                        color: #ACDF7D;
+                        cursor: pointer;
+                        font-weight: bold;
+
+                        mark{
+                            background-color: #ACDF7D;
+                            color: #47785C;
+                        }
+                    }
                 }
 
                 .nav-wrapper-mobile-itens-open{
