--- a/src/layouts/index.scss
+++ b/src/layouts/index.scss
@@ -14,38 +14,48 @@ body,
 	color: #26273C;
 }
 
+
+
+@media screen and (max-width: 600px) {
+	.children-wrapper{
+		width: 100%;
+		height: 100%;
+		z-index: 0;
+		display: flex;
+		align-items: center;
+		flex-direction: column;
+		padding: 1rem;
+	}
+}
+
+
+@media screen and (min-width: 600px) {
+	.children-wrapper{
+		width: 100%;
+		height: 100%;
+		z-index: 0;
+		display: flex;
+		align-items: center;
+		flex-direction: column;
+		padding: 2rem;
+	}
+}
+
+
+
 .children-card{
 	background-color: white;
-	// border-radius: 5px;
-	// opacity: 0.5;
 	width: 100%;
 	max-width: 1000px;
 	height: 100%;
 	z-index: 0;
-
-
 	border: 1px solid #26273C;
 	padding: 1.5rem;
-	// margin-top: 100px;
-    box-shadow: 5px 5px #26273C;
-	// max-width: 992px;
-	// min-height: calc(100vh - 206px );
+	box-shadow: 5px 5px #26273C;
 }
 
-.children-wrapper{
-	// background-color: aquamarine;
-	// opacity: 0.5;
-	width: 100%;
-	height: 100%;
-	z-index: 0;
-	display: flex;
-	align-items: center;
-	flex-direction: column;
-	// justify-content: center;
-	padding: 2rem;
-	// max-width: 992px;
-	// min-height: calc(100vh - 206px );
-}
+
+
 
 .background,
 body{
