--- a/src/layouts/index.scss
+++ b/src/layouts/index.scss
@@ -11,7 +11,7 @@ body,
 }
 * {
 	box-sizing: border-box;
-	color: #26273C;
+	color: black;
 }
 
 
@@ -49,9 +49,9 @@ body,
 	max-width: 1000px;
 	height: 100%;
 	z-index: 0;
-	border: 1px solid #26273C;
+	border: 1px solid black;
 	padding: 1.5rem;
-	box-shadow: 5px 5px #26273C;
+	box-shadow: 5px 5px black;
 }
 
 
@@ -59,17 +59,38 @@ body,
 
 .background,
 body{
-	background-color: #DFF6B5;
+	// background-color: grey;
 	position: absolute;
 	z-index: -2;
 	width: 100%;
 	height: 100%;
+	
+	// background-color: #fff;
+	// background-image: linear-gradient(30deg, #ccc 12%, transparent 12.5%, transparent 87%, #ccc 87.5%, #ccc),
+	// linear-gradient(150deg, #ccc 12%, transparent 12.5%, transparent 87%, #ccc 87.5%, #ccc),
+	// linear-gradient(30deg, #ccc 12%, transparent 12.5%, transparent 87%, #ccc 87.5%, #ccc),
+	// linear-gradient(150deg, #ccc 12%, transparent 12.5%, transparent 87%, #ccc 87.5%, #ccc),
+	// linear-gradient(60deg, #eee 25%, transparent 25.5%, transparent 75%, #eee 75%, #eee), 
+	// linear-gradient(60deg, #eee 25%, transparent 25.5%, transparent 75%, #eee 75%, #eee);
+	// background-size:40px 70px;
+	// background-position: 0 0, 0 0, 20px 35px,20px 35px, 0 0,20px 35px;
+
+
+	background:
+	linear-gradient(45deg, #eee 22.5px, transparent 22.5px)32px 32px,
+	linear-gradient(45deg, #eee 22.5px, transparent 22.5px,transparent 45.5px, #ccc 45.5px, #ccc 67.5px, transparent 67.5px),
+	linear-gradient(-45deg, #eee 11.5px, transparent 11.5px, transparent 34px,#eee 34px,#eee 56.5px,transparent 56.5px,transparent 79px,#eee 79px);
+	background-color:#ccc;
+	background-size: 64px 64px;
+	
 }
 
 .background-top{
-	background-color: #47785C;
+	background-color: rgb(70, 70, 70);
 	position: absolute;
 	width: 100%;
 	height: 300px;
 	z-index: -1;
+
+
 }
