--- a/src/pages/404.scss
+++ b/src/pages/404.scss
@@ -3,7 +3,7 @@
     font-size: 5rem;
     // text-align: center;
     // margin: 40px;
-    color: #26273C;
+    color: black;
     display: flex;
     justify-content: center;
     align-items: center;
