--- a/src/templates/index.scss
+++ b/src/templates/index.scss
@@ -11,8 +11,13 @@
     display: flex;
     justify-content: flex-end;
     text-transform: uppercase;
-    margin-bottom: 5rem;
+    margin-bottom: 3rem;
     h5{
         margin: 0;
     }
+}
+
+
+p,li {
+	font-family: 'Ubuntu', sans-serif;
 }
