--- a/src/layouts/index.scss
+++ b/src/layouts/index.scss
@@ -1,4 +1,8 @@
-@import url('https://fonts.googleapis.com/css?family=Raleway');
+// @import url('https://fonts.googleapis.com/css?family=Raleway');
+// @import url('https://fonts.googleapis.com/css?family=Open+Sans');
+// @import url('https://fonts.googleapis.com/css?family=Roboto+Condensed');
+@import url('https://fonts.googleapis.com/css?family=Josefin+Sans|Ubuntu');
+
 html,
 body,
 #___gatsby{
@@ -7,12 +11,27 @@ body,
 	height: 100%;
 	margin: 0;
     padding: 0;
-    font-family:  'Raleway', sans-serif;
+	// font-family:  'Raleway', sans-serif;
+	// font-family: 'Open Sans', sans-serif;
+	// font-family: 'Roboto Condensed', sans-serif;
+
+	// font-family: 'Roboto Condensed', sans-serif;
+	// font-family: 'Source Sans Pro', sans-serif;
+	// font-family: 'Ubuntu', sans-serif;
+	// font-family: 'Josefin Sans', sans-serif;
+	font-family: 'Josefin Sans', monospace;
+	// font-family: 'Dosis', sans-serif;
+	// font-family: 'Arvo', serif;
+	// font-family: 'Rubik', sans-serif;
+
+
+    // font-family:  'Lucida Sans Unicode', 'Lucida Grande', sans-serif
 }
 * {
 	box-sizing: border-box;
 	color: black;
 }
+
 
 
 
