--- a/src/layouts/index.scss
+++ b/src/layouts/index.scss
@@ -3,6 +3,27 @@
 // @import url('https://fonts.googleapis.com/css?family=Roboto+Condensed');
 @import url('https://fonts.googleapis.com/css?family=Josefin+Sans|Ubuntu');
 
+
+
+// $color1: #E1331B;
+// $color2: #F85E28;
+// $color3: #CCFCEE;
+// $color4: #7BD1B8;
+// $color5: #3E6C61;
+
+
+$color1: #234A56;
+$color2: #417D95;
+$color3: #89B9C5;
+$color4: #C1DEE2;
+$color5: #DDE7DC;
+$extra: #F34C56;
+
+
+
+
+
+
 html,
 body,
 #___gatsby{
@@ -60,6 +81,15 @@ body,
 	}
 }
 
+@mixin arrows($up,$down){
+	background:
+	linear-gradient(45deg, $down 22.5px, transparent 22.5px)32px 32px,
+	linear-gradient(45deg, $down 22.5px, transparent 22.5px,transparent 45.5px, $up 45.5px, $up 67.5px, transparent 67.5px),
+	linear-gradient(-45deg, $down 11.5px, transparent 11.5px, transparent 34px,$down 34px,$down 56.5px,transparent 56.5px,transparent 79px,$down 79px);
+	background-color:$up;
+	background-size: 64px 64px;
+}
+
 
 
 .children-card{
@@ -71,6 +101,7 @@ body,
 	border: 1px solid black;
 	padding: 1.5rem;
 	box-shadow: 5px 5px black;
+
 }
 
 
@@ -83,32 +114,14 @@ body{
 	z-index: -2;
 	width: 100%;
 	height: 100%;
-	
-	// background-color: #fff;
-	// background-image: linear-gradient(30deg, #ccc 12%, transparent 12.5%, transparent 87%, #ccc 87.5%, #ccc),
-	// linear-gradient(150deg, #ccc 12%, transparent 12.5%, transparent 87%, #ccc 87.5%, #ccc),
-	// linear-gradient(30deg, #ccc 12%, transparent 12.5%, transparent 87%, #ccc 87.5%, #ccc),
-	// linear-gradient(150deg, #ccc 12%, transparent 12.5%, transparent 87%, #ccc 87.5%, #ccc),
-	// linear-gradient(60deg, #eee 25%, transparent 25.5%, transparent 75%, #eee 75%, #eee), 
-	// linear-gradient(60deg, #eee 25%, transparent 25.5%, transparent 75%, #eee 75%, #eee);
-	// background-size:40px 70px;
-	// background-position: 0 0, 0 0, 20px 35px,20px 35px, 0 0,20px 35px;
-
-
-	background:
-	linear-gradient(45deg, #eee 22.5px, transparent 22.5px)32px 32px,
-	linear-gradient(45deg, #eee 22.5px, transparent 22.5px,transparent 45.5px, #ccc 45.5px, #ccc 67.5px, transparent 67.5px),
-	linear-gradient(-45deg, #eee 11.5px, transparent 11.5px, transparent 34px,#eee 34px,#eee 56.5px,transparent 56.5px,transparent 79px,#eee 79px);
-	background-color:#ccc;
-	background-size: 64px 64px;
-	
+	@include arrows($color3,$color4)
 }
 
 .background-top{
-	background-color: rgb(70, 70, 70);
+	background-color: $color1;
 	position: absolute;
 	width: 100%;
-	height: 300px;
+	height: 250px;
 	z-index: -1;
 
 
