--- a/src/templates/index.scss
+++ b/src/templates/index.scss
@@ -1,4 +1,14 @@
 
+$color1: #234A56;
+$color2: #417D95;
+$color3: #89B9C5;
+$color4: #C1DEE2;
+$color5: #DDE7DC;
+$extra: #F34C56;
+
+
+
+
 
 .title{
     text-transform: capitalize;
@@ -13,11 +23,61 @@
     text-transform: uppercase;
     margin-bottom: 3rem;
     h5{
-        margin: 0;
+        margin: 0.5rem 0 0 0;
+    }
+}
+
+.blog-post-content{
+    font-family: 'Ubuntu', sans-serif;
+
+    img{
+        border:  2px solid black;
+        width: 100%;
+    }
+
+
+    blockquote{
+        border-left: 5px solid $extra;
+        padding: 1px 1px 1px 5px;
+        p{
+            margin: 0;
+        }
+    }
+
+
+    hr{
+        border: 1px dashed lightgray;
+    }
+
+    table{
+        border-collapse: collapse;
+        border: 2px solid black;
+        width: 100%;
+        th{
+            border: 1px solid black;
+            background-color: $extra;
+            color: white;
+            font-weight: bold;
+        }
+        td{
+            border: 1px solid black;
+        }
+    }
+    strong{
+        color: whitesmoke;
+        background-color: $extra;
     }
 }
 
 
-p,li {
-	font-family: 'Ubuntu', sans-serif;
+
+
+
+
+.go-back-wrapper{
+    display: flex;
+    justify-content: flex-start;
+    align-items: center;
+    margin: 0 0 3rem 0;
+    text-transform: capitalize;
 }
