--- a/src/components/header/index.scss
+++ b/src/components/header/index.scss
@@ -1,16 +1,5 @@
+@import '../../globalvars.scss';
 
-// $color1: #E1331B;
-// $color2: #F85E28;
-// $color3: #CCFCEE;
-// $color4: #7BD1B8;
-// $color5: #3E6C61;
-
-$color1: #234A56;
-$color2: #417D95;
-$color3: #89B9C5;
-$color4: #C1DEE2;
-$color5: #DDE7DC;
-$extra: #F34C56;
 
 
 
