--- a/src/layouts/index.scss
+++ b/src/layouts/index.scss
@@ -1,6 +1,7 @@
 // @import url('https://fonts.googleapis.com/css?family=Raleway');
 // @import url('https://fonts.googleapis.com/css?family=Open+Sans');
 // @import url('https://fonts.googleapis.com/css?family=Roboto+Condensed');
+@import '../globalvars.scss';
 @import url('https://fonts.googleapis.com/css?family=Josefin+Sans|Ubuntu');
 
 
@@ -12,12 +13,31 @@
 // $color5: #3E6C61;
 
 
-$color1: #234A56;
-$color2: #417D95;
-$color3: #89B9C5;
-$color4: #C1DEE2;
-$color5: #DDE7DC;
-$extra: #F34C56;
+// $color1: #234A56;
+// $color2: #417D95;
+// $color3: #89B9C5;
+// $color4: #C1DEE2;
+// $color5: #DDE7DC;
+// $extra: #F34C56;
+
+
+
+// $color1: #031634;
+// $color2: #417D95;
+// $color3: #033649;
+// $color4: #036564;
+// $color5: #DDE7DC;
+// $extra: #036564;
+
+
+
+// $color1: #27ae60;
+// $color2: #417D95;
+// $color3: #eff0f1;
+// $color4: #fcfbfc;
+// $color5: #e9f0f4;
+// $extra: #036564;
+
 
 
 
