--- a/src/pages/blog.scss
+++ b/src/pages/blog.scss
@@ -1,10 +1,5 @@
+@import '../globalvars.scss';
 
-$color1: #234A56;
-$color2: #417D95;
-$color3: #89B9C5;
-$color4: #C1DEE2;
-$color5: #DDE7DC;
-$extra: #F34C56;
 
 
 
