--- a/src/components/banner/index.scss
+++ b/src/components/banner/index.scss
@@ -1,16 +1,5 @@
-// #particles-js {
-//     position: absolute;
-//     width: 992px;
-//     height: 300px;
-//     background-color: #d14334;
-//     background-image: url("");
-//     background-repeat: no-repeat;
-//     background-size: cover;
-//     background-position: 50% 50%;
-//     border-radius: 5px;
-//     z-index: 1;
-//   }
-  
+@import '../../globalvars.scss';
+
  
   
   
