--- a/src/templates/index.scss
+++ b/src/templates/index.scss
@@ -1,12 +1,4 @@
-
-$color1: #234A56;
-$color2: #417D95;
-$color3: #89B9C5;
-$color4: #C1DEE2;
-$color5: #DDE7DC;
-$extra: #F34C56;
-
-
+@import '../globalvars.scss';
 
 
 
