--- a/src/templates/index.scss
+++ b/src/templates/index.scss
@@ -5,17 +5,24 @@
 .title{
     text-transform: capitalize;
     margin: 0;
-    word-break: break-all;
+    word-break: break-word;
 }
 
 .subtitle{
     width: 100%;
     display: flex;
-    justify-content: flex-end;
+    justify-content: space-between;
+    align-items: center;
     text-transform: uppercase;
     margin-bottom: 3rem;
+    margin-top: 1rem;
+
+
+    border-top: solid black;
+    border-bottom: solid black;
+
     h5{
-        margin: 0.5rem 0 0 0;
+        margin: 0.5rem 0;
     }
 }
 
@@ -56,8 +63,11 @@
         }
     }
     strong{
-        color: whitesmoke;
-        background-color: $extra;
+        font-weight: inherit;
+        color: white;
+        background-color: $color1;
+        padding-left: 2.5px;
+        padding-right: 2.5px;        
     }
 }
 
@@ -67,9 +77,7 @@
 
 
 .go-back-wrapper{
-    display: flex;
-    justify-content: flex-start;
-    align-items: center;
-    margin: 0 0 3rem 0;
+    // margin: 0 0 3rem 0;
+    // height: 100%;
     text-transform: capitalize;
 }
