add category counter

--- a/src/pages/blog.scss
+++ b/src/pages/blog.scss
@@ -2,7 +2,9 @@
 
 
     .category{
-        text-transform: capitalize;
+        // text-transform: capitalize;
+        text-transform: uppercase;
+
     }
 
     .itens {
