--- a/src/pages/blog.scss
+++ b/src/pages/blog.scss
@@ -2,9 +2,7 @@
 
 
     .category{
-        // text-transform: capitalize;
-        text-transform: uppercase;
-
+        text-transform: capitalize;
     }
 
     .itens {
